hphp/test/quick/reserved_class2.php.expectf
Fatal error: Cannot use 'HH\string' as class name as it is reserved in %s on line 3
